@@ -6,6 +6,7 @@
     * Change strike lightning 100+ meters away to Sword + Power (was Sword + Flame)
     * Add Sword + Flame = temporary glowstone headlamp
     * Add Helmet + Fire Aspect = swim in lava
+    * Add Chestplate + Knockback = reflect arrows
 
 2012-02-03  0.2
     * Add Bow + Sharpness = increase velocity
